# claude-code-sdk-demos

./: .gitignore  AUDIT_SUMMARY.md  CLAUDE.md  COUPLING_AUDIT_QUICKSTART.md  COUPLING_AUDIT_REPORT.md  COUPLING_AUDIT_SUMMARY.md  README.md  SIMPLEX_ARCHITECTURE.md
COUPLING_VIOLATIONS/: ISSUE_001_DATABASE_INTRUSIVE_COUPLING.md  ISSUE_002_MODEL_COUPLING_DUPLICATED_INTERFACES.md  README.md
coupling-audit-20251018/: AUDIT-REPORT.md  ISSUE-001-CRITICAL-database-coupling.md  ISSUE-002-CRITICAL-duplicated-business-logic.md  ISSUE-003-HIGH-private-field-access.md  ISSUE-004-HIGH-scattered-business-rules.md  README.md
coupling-audit-issues/: INDEX.md  ISSUE-001-CRITICAL-database-intrusive-coupling.md  ISSUE-002-CRITICAL-functional-coupling-duplicate-sms-logic.md  (+6 more)
research-agent/: COMPARISON.md  README.md  SKILLS_SETUP.md  WIDE_RESEARCH.md  pyproject.toml  test_hooks.py
research-agent/.claude/skills/: README.md
research-agent/examples/: wide_research_demo.py
research-agent/research_agent/: agent.py  agent_wide.py  config_wide.py
research-agent/research_agent/prompts/: lead_agent.txt  lead_agent_wide.txt  report_writer.txt  report_writer_wide.txt  researcher.txt  researcher_wide.txt
research-agent/research_agent/utils/: message_handler.py  subagent_tracker.py
sms-agent-python/: .env.example  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_sms.py
sms-agent-python/agent/: __init__.py  sms_agent.py  sms_processor.py
sms-agent-python/database/: __init__.py  db.py  models.py  schema.sql
sms-agent-python/server/: __init__.py  api.py
(+25 files in other folders)
